Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-7074

[C++] ASSERT_OK_AND_ASSIGN crashes when failing

    XMLWordPrintableJSON

Details

    Description

      Instead of simply failing the test, the ASSERT_OK_AND_ASSIGN macro crashes when the operation failed, e.g.:

      Value of: _st.ok()
        Actual: false
      Expected: true
      WARNING: Logging before InitGoogleLogging() is written to STDERR
      F1106 12:53:32.882110  4698 result.cc:28] ValueOrDie called on an error:  XXX
      

      Attachments

        Issue Links

          Activity

            People

              fsaintjacques Francois Saint-Jacques
              apitrou Antoine Pitrou
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 50m
                  50m