ARROW-7074: [C++] ASSERT_OK_AND_ASSIGN should use ASSERT_OK instead of EXPE…

…CT_OK

There is no point of using EXPECT_OK in ASSERT_OK_AND_ASSIGN since ValueOrDie will terminate afterward. Using ASSERT_OK ensure gtest doesn't crash but move to the next tests.

Closes #5788 from fsaintjacques/ARROW-7074-assert-ok-and-assign and squashes the following commits:

51a257552 <François Saint-Jacques> ARROW-7074: ASSERT_OK_AND_ASSIGN should use ASSERT_OK instead of EXPECT_OK

Authored-by: François Saint-Jacques <fsaintjacques@gmail.com>
Signed-off-by: Benjamin Kietzman <bengilgit@gmail.com>