cpp/src/arrow/result.h
@@ -339,6 +339,9 @@ class Result : public util::EqualityComparable<Result<T>> {
 // Executes an expression that returns a Result, extracting its value
 // into the variable defined by lhs (or returning on error).
 //
+// Example: Assigning to a new value
+//   ARROW_ASSIGN_OR_RAISE(auto value, MaybeGetValue(arg));
+//
 // Example: Assigning to an existing value
 //   ValueType value;
 //   ARROW_ASSIGN_OR_RAISE(value, MaybeGetValue(arg));
